<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:scrollbars="horizontal" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#f4f4f4" >

        <Button
            android:id="@+id/navigation_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/navigation_button" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/favorites"
            android:textColor="#000000"
            android:textSize="18dp" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/delete"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fullDemo_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_layout" >

        <LinearLayout
            android:id="@+id/units_layout"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="#f4f4f4"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/fromLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="0.5dp"
                android:layout_weight=".5"
                android:background="#ffffff"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/value1_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="bottom|center"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/units1_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/kilomoleUnit"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/units_desc_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/kilomole"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/toLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="0.5dp"
                android:layout_toRightOf="@+id/fromLayout"
                android:layout_weight=".5"
                android:background="#ffffff"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/value2_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="bottom|center"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/units2_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/moloUnit"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/units_desc2_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/mole"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/units_layout"
            android:layout_marginBottom="2dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@drawable/favorite_bg"
                    android:text="@string/seven"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@drawable/favorite_bg"
                    android:text="@string/eight"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@drawable/favorite_bg"
                    android:text="@string/nine"
                    android:textSize="30dp" />

                <ImageButton
                    android:id="@+id/button_delete"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@drawable/favorite_bg"
                    android:src="@drawable/icon_delete" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/noitems_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numbers_layout"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/noItems"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/demo_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noitems_textView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/favoriteList"
            android:textColor="#000000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_below="@+id/demo_textView"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/ok_bg"
            android:text="@string/Ok"
            android:textSize="18dp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/favorites_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_layout"
        android:layout_marginTop="3dp"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@drawable/favlist_divider_bg"
        android:dividerHeight="3dp"
        android:visibility="invisible" >
    </ListView>

    <ImageView
        android:id="@+id/fadein_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/thumbprint" />

    <ImageView
        android:id="@+id/fadeout_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/thumbprint" />

</RelativeLayout>