<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="#007aff" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/post"
        android:textColor="#007aff" />

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/cancel_button"
        android:layout_marginTop="15dp"
        android:background="#c8c8c8" />

    <TextView
        android:id="@+id/app_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_button"
        android:layout_alignBottom="@+id/cancel_button"
        android:layout_centerHorizontal="true"
        android:text="@string/appname"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view"
        android:drawableRight="@drawable/ic_launcher"
        android:ems="10"
        android:text="" >

        <requestFocus />
    </EditText>

</RelativeLayout>